--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <body>
 
 <div class="p-5 bg-success text-white text-center">
-  <h1>Unlimited Toons</h1>
-  <p>Resize this responsive page to see the effect!</p> 
+  <h1>Unlimited Toons</h1> 
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -27,7 +26,7 @@
         <a class="nav-link" href="unlimitedtoons.github.io">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="cnceeschedule.tumblr.com"></a>
+        <a class="nav-link" href="cnceeschedule.tumblr.com">cnceeschedule</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
@@ -55,8 +54,7 @@
       <h2>About Me</h2>
       <div class="fakeimg">Fake Image</div>
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3 class="mt-4">Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
+      <h3 class="mt-4">Links</h3>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
           <a class="nav-link active" href="#">Active</a>
