--- a/index.html
+++ b/index.html
@@ -38,12 +38,7 @@
 <div class="container mt-5">
   <div class="row">
         <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2020</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-
+          
       <h2 class="mt-5">TITLE HEADING</h2>
       <h5>Title description, Sep 2, 2020</h5>
       <div class="fakeimg">Fake Image</div>
@@ -53,12 +48,9 @@
   <div class="col-sm-4">
       <h2>About Me</h2>
       <div class="fakeimg">Fake Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      <p>I archive Cartoon Network, Cartoonito, Disney Channel, Nickelodeon, Nicktoons and TeenNick Central and Eastern Europe schedules.</p>
       <h3 class="mt-4">Links</h3>
       <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
