--- a/tvguide.html
+++ b/tvguide.html
@@ -89,7 +89,7 @@
             for (let i = 0; i < 7; i++) {
                 const date = new Date(monday);
                 date.setDate(monday.getDate() + i);
-                const file = 'xml/' + getFileName(date);
+                const file = getFileName(date);
                 fetchXML(file, daysOfWeek[i]);
             }
         }
