--- a/tvguide.html
+++ b/tvguide.html
@@ -135,8 +135,7 @@
                             ${formatDate(start)}<br>
                             <strong>${title}</strong><br>
                             ${season}/${episode}<br>
-                            ${eptitle}<br>
-                            //<em>${desc}</em><br><br>
+                            ${eptitle}<br><br>
                         `;
                     }
                    
